Created services folder for BMI and Google maps API.

--- a/Views/Clients/Map.cshtml
+++ b/Views/Clients/Map.cshtml
@@ -44,7 +44,7 @@
 @section scripts{
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcbQClo7NS9uH8VIQ7lMwc_FuUX2nVagg&callback=initMap&libraries=&v=weekly"
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-gzpHP98dkwr6NfIiPyRGdjAs38OexB8&callback=initMap"
             defer></script>
     <script type="text/javascript">
     let map;
