--- a/Views/Clients/Edit.cshtml
+++ b/Views/Clients/Edit.cshtml
@@ -89,12 +89,12 @@
                 <input asp-for="PastInjuries" class="form-control" />
                 <span asp-validation-for="PastInjuries" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
                 <span asp-validation-for="IdentityUserId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="PersonalTrainerId" class="control-label"></label>
                 <select asp-for="PersonalTrainerId" class="form-control" asp-items="ViewBag.PersonalTrainerId"></select>
                 <span asp-validation-for="PersonalTrainerId" class="text-danger"></span>
