--- a/Views/Clients/Edit.cshtml
+++ b/Views/Clients/Edit.cshtml
@@ -94,9 +94,9 @@
                 <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
                 <span asp-validation-for="IdentityUserId" class="text-danger"></span>
             </div>
-            <div hidden class="form-group">
+            <div class="form-group">
                 <label asp-for="PersonalTrainerId" class="control-label"></label>
-                <select asp-for="PersonalTrainerId" class="form-control" asp-items="ViewBag.PersonalTrainerId"></select>
+                <select asp-for="PersonalTrainerId" class="form-control" asp-items='Model.PersonalTrainers'></select>
                 <span asp-validation-for="PersonalTrainerId" class="text-danger"></span>
             </div>
             <div class="form-group">
