--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -58,9 +58,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.PastInjuries)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.IdentityUser)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.PersonalTrainer)
             </th>
@@ -115,11 +115,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PastInjuries)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.IdentityUser.Id)
-            </td>
+            </td>*@
             <td>
-                @Html.DisplayFor(modelItem => item.PersonalTrainer.PersonalTrainerId)
+                @Html.DisplayFor(modelItem => item.PersonalTrainer.FirstName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ClientId">Edit</a> |
